--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,20 @@ nav {
   visibility: hidden;
 }
 
+.interrupt-wrapper button {
+  animation: glow 1s linear infinite alternate;
+}
+
+@keyframes glow {
+  0% {
+    background-color: #FFC107;
+  }
+
+  100% {
+    background-color: #FFD967;
+  }
+}
+
 svg {
   width: 300px;
   height: 300px;
